should never switch to flex box in this case | have to fix the cards width on mobile screens

--- a/css/cards.css
+++ b/css/cards.css
@@ -37,8 +37,7 @@ body {
 
 @media (max-width: 690px) {
     .cards {
-        display: flex;
-        flex-direction: column;
-
+    display: grid;
+    grid-template-columns: repeat(1, minmax(200px, 1fr));
     }
 }
